[tool.poetry]
name = "deals-maharaja-backend"
version = "0.1.0"
description = ""
authors = ["Shivansh Goel <shivanshgoel009@gmail.com>"]
readme = "README.md"
packages = [{include = "deals_maharaja_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.0"}
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.28.2"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
